# fuzzymonth

./: Cargo.toml  README.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_month.rs
src/: lib.rs  main.rs
