[package]
name = "fuzzymonth"
description = "A fuzzy month parser which handles a variety of input formats."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mre/fuzzymonth"
homepage = "https://github.com/mre/fuzzymonth"
version = "0.1.0"
edition = "2021"
categories = ["text-processing", "parsing", "date-and-time"]
keywords = [
    "fuzzy",
    "month",
    "parser",
    "date",
    "time",
    "parsing",
    "text",
    "processing",
]

[dependencies]
strsim = "0.11.1"

[dev-dependencies]
rstest = "0.24.0"
