[package]
name = "fuzzymonth"
description = "A fuzzy month parser which handles a variety of input formats."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mre/fuzzymonth"
homepage = "https://github.com/mre/fuzzymonth"
version = "0.2.0"
edition = "2021"
categories = ["text-processing", "parsing", "date-and-time"]
keywords = ["fuzzy", "month", "parser", "date", "time"]

[dependencies]
doc-comment = "0.3.3"
strsim = "0.11.1"

[dev-dependencies]
doc-comment = "0.3.3"
rstest = "0.24.0"
