[package]
name = "fuzzymonth-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fuzzymonth]
path = ".."

[[bin]]
name = "parse_month"
path = "fuzz_targets/parse_month.rs"
test = false
doc = false
bench = false
